# backend

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.yaml  locustfile.py  manage.py  nginx.conf  pyproject.toml  pytest.ini  run.sh  start-dev.sh  start-server-dev.sh  start-server.sh
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-dev.yaml  cd-prod.yaml  cd-staging.yaml  ci-dbt.yaml  ci-pr.yaml  ci-python.yaml  ci.yaml  deploy-dev.yaml  deploy-prod.yaml  deploy-staging.yaml  lint.yaml  release-chart.yaml  release-dev.yaml  release-docker.yaml  release-helm-chart.yaml  release-prod.yaml  release-staging.yaml  sync-metadata.yaml  sync.yaml
alembic/: env.py
alembic/versions/: 5285328ce8f3_initial_version.py
api/: main.py
api/utils/: utils.py
app/: asgi.py  conftest.py  main.py  urls.py
app/account/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
app/account/migrations/: 0001_initial.py  0003_account_full_name.py  0005_rename_ckan_id_account_uuid_account_staff_groups_and_more.py
app/alembic/: env.py
app/api/api_v1/: api.py
app/api/v1/: admin.py  apps.py  filters.py  models.py  signals.py  tasks.py  views.py
app/apps/account/: admin.py  apps.py  forms.py  models.py  schema.py  signals.py  tests.py  urls.py  views.py
app/apps/core/: apps.py  urls.py
app/apps/schemas/: apps.py  urls.py
app/core/: apps.py  config.py  urls.py
app/crud/: base.py  category.py  column.py  dataset.py  project.py  table.py  tag.py
app/custom/: graphql.py
app/database/: base_class.py  session.py
app/models/: __init__.py  category.py  column.py  dataset.py  project.py  table.py  tag.py
app/schemas/: apps.py  category.py  column.py  dataset.py  project.py  table.py  tag.py  urls.py  views.py
app/settings/: base.py  dev.py  prod.py
app/utils/: utils.py
apps/: conftest.py  urls.py  utils.py  wsgi.py
apps/custom/: graphql.py
apps/settings/: base.py  local.py  remote.py
backend/: asgi.py  conftest.py  urls.py  wsgi.py
backend/apps/: schema.py
backend/custom/: backend_token_auth.py  backend_token_middleware.py  client.py  environment.py  graphql_auto.py  graphql_base.py  graphql_jwt.py  logger.py  middleware.py  model.py  storage.py  task_decorators.py  utils.py
backend/settings/: __init__.py  base.py  local.py  remote.py
basedosdados_api/: asgi.py  conftest.py  logger.py  middlewares.py  urls.py  utils.py  wsgi.py
basedosdados_api/account/: admin.py  apps.py  forms.py  models.py  schema.py  serializers.py  signals.py  storage.py  tests.py  token.py  translation.py  urls.py  views.py
basedosdados_api/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
basedosdados_api/core/: apps.py  models.py  urls.py  views.py
basedosdados_api/custom/: allow_any.py  graphql.py  model.py  routers.py  views.py
basedosdados_api/payments/: apps.py  urls.py  views.py
basedosdados_api/schemas/: apps.py  urls.py  views.py
basedosdados_api/settings/: __init__.py  base.py  dev.py  prod.py
bd_api/: asgi.py  conftest.py  urls.py  utils.py  wsgi.py
bd_api/account/: admin.py  apps.py  forms.py  models.py  signals.py  storage.py  tests.py  urls.py  views.py
bd_api/apps/: schema.py
bd_api/core/: apps.py  urls.py
bd_api/custom/: client.py  environment.py  graphql.py  graphql_auto.py  graphql_component.py  graphql_jwt.py  logger.py  model.py
bd_api/schemas/: apps.py  urls.py
bd_api/settings/: base.py  dev.py  local.py  prod.py  remote.py
charts/basedosdados-api/: Chart.yaml  values.yaml
otel_collector/: otel-collector-config.yaml
scripts/: ai-database-translate.py  aisql-ui.py  aisql.py  clean.py  database-clean-area-slug.py  dump.sh  lint.py  sync.sh  test.py
scripts/debug/: debug.ipynb  debug.py
scripts/migrations/: 20230803_migrate_users.py  20230807_migrate_careers.py  20231006_migrate_storage.py
utils/: __init__.py  graphql.py
utils/migration/: 2023-01-19-ckan-django.py  ckan_django_main.py  ckan_django_utils.py  ckan_org_images.py  ckan_org_utils.py  snippets.graphql
(+625 files in other folders)
