[tool.poetry]
name = "basedosdados-api"
version = "0.0.1"
description = "Base dos Dados API"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>", "Guilherme Peres <contact@gperes.dev>"]
license = "GPL-3.0-only"
homepage = "https://github.com/basedosdados/backend"
repository = "https://github.com/basedosdados/backend"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
django-health-check = "^3.17.0"
graphene-django = "3.0.0"
django-filter = "^22.1"
django-graphql-jwt = "^0.3.4"
django-modeltranslation = "^0.18.8"
pylint = "^2.16.1"
pillow = "^9.4.0"
graphene-file-upload = "1.3.0"
django-haystack = {extras = ["elasticsearch"], version = "^3.2.1"}
graphene = "3.2.1"
django-storages = {extras = ["google"], version = "^1.13.2"}
google-api-python-client = "^2.83.0"
django-jazzmin = "^2.6.0"
martor = "^1.6.26"
django-extensions = "^3.2.1"
django-ordered-model = "^3.7.4"
google-cloud-bigquery = "^3.11.3"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^6.1.0"
pygments = "^2.15.1"
yamllint = "^1.32.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"

[tool.poetry.scripts]
lint = "scripts.lint:main"
test = "scripts.test:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
