[tool.poetry]
name = "bd_api"
version = "0.0.1"
description = "Base dos Dados API"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>", "Guilherme Peres <contact@gperes.dev>"]
license = "GPL-3.0-only"
homepage = "https://github.com/basedosdados/backend"
repository = "https://github.com/basedosdados/backend"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
django-health-check = "^3.17.0"
graphene-django = "3.0.0"
django-filter = "^22.1"
django-graphql-jwt = "^0.3.4"
django-modeltranslation = "^0.18.8"
pillow = "^9.4.0"
graphene-file-upload = "1.3.0"
django-haystack = {extras = ["elasticsearch"], version = "^3.2.1"}
graphene = "3.2.1"
django-storages = {extras = ["google"], version = "^1.13.2"}
google-api-python-client = "^2.83.0"
django-jazzmin = "^2.6.0"
django-extensions = "^3.2.1"
django-ordered-model = "^3.7.4"
google-cloud-bigquery = "^3.11.3"
faker = "^19.6.1"
loguru = "^0.7.2"
huey = "^2.5.0"
redis = "^5.0.1"
pandas = "^2.1.1"
pandas-gbq = "^0.19.2"
google-cloud-storage = "^2.11.0"
stripe = "^4.2.0"
dj-stripe = "^2.8.3"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.32.0"
pre-commit = "^3.3.3"
ruff = "^0.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"

[tool.poetry.scripts]
lint = "scripts.lint:main"
test = "scripts.test:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
